--- a/promtail/promtail-config.yml
+++ b/promtail/promtail-config.yml
@@ -7,13 +7,13 @@ positions:
 
 clients:
   - url: http://loki:3100/loki/api/v1/push
+    batchsize: 1048576
+    batchwait: 1s
+    timeout: 10s
     backoff_config:
       min_period: 500ms
       max_period: 5m
       max_retries: 10
-    batchsize: 1048576
-    batchwait: 1s
-    timeout: 10s
 
 scrape_configs:
   - job_name: docker
@@ -41,10 +41,6 @@ scrape_configs:
       - source_labels: [__meta_docker_container_label_com_docker_swarm_task_slot]
         target_label: replica
 
-      - source_labels: [__meta_docker_container_label_com_docker_swarm_service_name]
-        regex: '(.+)'
-        action: keep
-
     pipeline_stages:
       - json:
           expressions:
@@ -53,12 +49,9 @@ scrape_configs:
             timestamp: timestamp
             service: service
 
-      - regex:
-          expression: '.*level=(?P<level>\w+).*'
-
-      - structured_metadata:
+      - labels:
           level:
-          service:
+          service
 
       - timestamp:
           source: timestamp
