Fix Promtail configuration: add missing colon for service label in pipeline stages

--- a/promtail/promtail-config.yml
+++ b/promtail/promtail-config.yml
@@ -51,7 +51,7 @@ scrape_configs:
 
       - labels:
           level:
-          service
+          service:
 
       - timestamp:
           source: timestamp
