--- a/promtail/promtail-config.yml
+++ b/promtail/promtail-config.yml
@@ -22,30 +22,30 @@ scrape_configs:
         refresh_interval: 10s
 
     relabel_configs:
-      - source_labels: [__meta_docker_container_name]
-        regex: '/(.*)'
-        target_label: container_name
+      - source_labels: [__meta_docker_container_label_com_docker_swarm_service_name]
+        target_label: service_name
+        action: replace
 
-      - source_labels: [__meta_docker_container_label_com_docker_swarm_stack_namespace]
+      - source_labels: [__meta_docker_container_label_com_docker_compose_service]
+        target_label: service_name
+        action: replace
+
+      - source_labels: [__meta_docker_container_label_com_docker_stack_namespace]
         target_label: stack
+        action: replace
 
       - source_labels: [__meta_docker_container_label_com_docker_swarm_task_name]
         regex: '([^\.]+)\..*'
-        target_label: service_name
-
-      - source_labels: [__meta_docker_container_name]
-        regex: '/([^_]+).*'
-        target_label: service_name
-        action: replace_if_missing
-
-      - source_labels: [__meta_docker_container_label_com_docker_swarm_task_name]
         target_label: task_name
+        action: replace
 
       - source_labels: [__meta_docker_container_label_com_docker_swarm_node_id]
         target_label: node_id
+        action: replace
 
       - source_labels: [__meta_docker_container_label_com_docker_swarm_task_slot]
         target_label: replica
+        action: replace
 
     pipeline_stages:
       - json:
